ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -39,7 +39,7 @@
   .nav-wrapper
     background: #FFF
     right: 0
-    margin: -25px 0 40px
+    margin: 0 0 40px
     position: relative
     width: 100%
 
